# Michael Bliesath - Solution

import numpy as np
import pandas as pd

from Circuit import Circuit

class Solution:
    def __init__(self):